examples/ast-html/src/tests/corpus/snapshots/ast_html__tests__corpus__all_caps_doctype@name.snap
---
source: examples/ast-html/src/tests/corpus/mod.rs
expression: "get_ast(& db, file)"
---
ParsedAst {
    nodes: [
        Document {
            children: [
                AstNodeId {
                    id: 1,
                    _marker: PhantomData<ast_html::generated::Doctype_Element_Entity_ErroneousEndTag_ScriptElement_StyleElement_Text>,
                },
            ],
            _range: Range {
                start_byte: 0,
                end_byte: 125,
                start_point: Point {
                    row: 0,
                    column: 0,
                },
                end_point: Point {
                    row: 2,
                    column: 60,
                },
            },
            _id: 0,
            _parent: None,
            _is_missing: false,
        },
        Doctype(
            Doctype {
                _range: Range {
                    start_byte: 0,
                    end_byte: 125,
                    start_point: Point {
                        row: 0,
                        column: 0,
                    },
                    end_point: Point {
                        row: 2,
                        column: 60,
                    },
                },
                _id: 1,
                _parent: Some(
                    0,
                ),
                _is_missing: false,
            },
        ),
    ],
}
