examples/ast-html/src/tests/corpus/snapshots/ast_html__tests__corpus__col_group_elements_without_end_tags@name.snap
---
source: src/tests/corpus/mod.rs
expression: document
---
Document {
    children: [
        Element(
            Element {
                children: [
                    StartTag(
                        StartTag {
                            children: [
                                TagName(
                                    TagName {
                                        [RANGE]
                                    },
                                ),
                            ],
                            [RANGE]
                        },
                    ),
                    Element(
                        Element {
                            children: [
                                StartTag(
                                    StartTag {
                                        children: [
                                            TagName(
                                                TagName {
                                                    [RANGE]
                                                },
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                                Element(
                                    Element {
                                        children: [
                                            StartTag(
                                                StartTag {
                                                    children: [
                                                        TagName(
                                                            TagName {
                                                                [RANGE]
                                                            },
                                                        ),
                                                        Attribute(
                                                            Attribute {
                                                                children: [
                                                                    AttributeName(
                                                                        AttributeName {
                                                                            [RANGE]
                                                                        },
                                                                    ),
                                                                    QuotedAttributeValue(
                                                                        QuotedAttributeValue {
                                                                            children: Some(
                                                                                AttributeValue {
                                                                                    [RANGE]
                                                                                },
                                                                            ),
                                                                            [RANGE]
                                                                        },
                                                                    ),
                                                                ],
                                                                [RANGE]
                                                            },
                                                        ),
                                                    ],
                                                    [RANGE]
                                                },
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                                Element(
                                    Element {
                                        children: [
                                            StartTag(
                                                StartTag {
                                                    children: [
                                                        TagName(
                                                            TagName {
                                                                [RANGE]
                                                            },
                                                        ),
                                                        Attribute(
                                                            Attribute {
                                                                children: [
                                                                    AttributeName(
                                                                        AttributeName {
                                                                            [RANGE]
                                                                        },
                                                                    ),
                                                                    QuotedAttributeValue(
                                                                        QuotedAttributeValue {
                                                                            children: Some(
                                                                                AttributeValue {
                                                                                    [RANGE]
                                                                                },
                                                                            ),
                                                                            [RANGE]
                                                                        },
                                                                    ),
                                                                ],
                                                                [RANGE]
                                                            },
                                                        ),
                                                    ],
                                                    [RANGE]
                                                },
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                            ],
                            [RANGE]
                        },
                    ),
                    Element(
                        Element {
                            children: [
                                StartTag(
                                    StartTag {
                                        children: [
                                            TagName(
                                                TagName {
                                                    [RANGE]
                                                },
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                                Element(
                                    Element {
                                        children: [
                                            StartTag(
                                                StartTag {
                                                    children: [
                                                        TagName(
                                                            TagName {
                                                                [RANGE]
                                                            },
                                                        ),
                                                    ],
                                                    [RANGE]
                                                },
                                            ),
                                            Text(
                                                Text {
                                                    [RANGE]
                                                },
                                            ),
                                            EndTag(
                                                EndTag {
                                                    children: TagName {
                                                        [RANGE]
                                                    },
                                                    [RANGE]
                                                },
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                                Element(
                                    Element {
                                        children: [
                                            StartTag(
                                                StartTag {
                                                    children: [
                                                        TagName(
                                                            TagName {
                                                                [RANGE]
                                                            },
                                                        ),
                                                    ],
                                                    [RANGE]
                                                },
                                            ),
                                            Text(
                                                Text {
                                                    [RANGE]
                                                },
                                            ),
                                            EndTag(
                                                EndTag {
                                                    children: TagName {
                                                        [RANGE]
                                                    },
                                                    [RANGE]
                                                },
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                                Element(
                                    Element {
                                        children: [
                                            StartTag(
                                                StartTag {
                                                    children: [
                                                        TagName(
                                                            TagName {
                                                                [RANGE]
                                                            },
                                                        ),
                                                    ],
                                                    [RANGE]
                                                },
                                            ),
                                            Text(
                                                Text {
                                                    [RANGE]
                                                },
                                            ),
                                            EndTag(
                                                EndTag {
                                                    children: TagName {
                                                        [RANGE]
                                                    },
                                                    [RANGE]
                                                },
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                                EndTag(
                                    EndTag {
                                        children: TagName {
                                            [RANGE]
                                        },
                                        [RANGE]
                                    },
                                ),
                            ],
                            [RANGE]
                        },
                    ),
                    EndTag(
                        EndTag {
                            children: TagName {
                                [RANGE]
                            },
                            [RANGE]
                        },
                    ),
                ],
                [RANGE]
            },
        ),
    ],
    [RANGE]
}
